tests/error/missing_phase.gw
// [contains] missing phase component of polar value...
 %(0);
